--- a/capstone_two_transfer_learning.ipynb
+++ b/capstone_two_transfer_learning.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/keras_applications/resnet50.py:265: UserWarning: The output shape of `ResNet50(include_top=False)` has been changed since Keras 2.2.0.\n",
+      "  warnings.warn('The output shape of `ResNet50(include_top=False)` '\n",
+      "/Users/jtian/anaconda3/lib/python3.7/site-packages/keras/utils/conv_utils.py:82: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.copy(kernel[slices])\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.applications.resnet50 import ResNet50, preprocess_input\n",
     "\n",
@@ -18,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(229, 1, 200, 200)\n"
+      "(200, 1, 200, 200)\n"
      ]
     }
    ],
@@ -82,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(229, 200, 200, 3)\n"
+      "(200, 200, 200, 3)\n"
      ]
     }
    ],
@@ -109,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,34 +141,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "229/229 [==============================] - 100s 435ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 82s 411ms/step - loss: 7.0374 - acc: 0.5050\n",
       "Epoch 2/10\n",
-      "229/229 [==============================] - 98s 428ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 81s 407ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 3/10\n",
-      "229/229 [==============================] - 97s 425ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 82s 408ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 4/10\n",
-      "229/229 [==============================] - 98s 427ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 83s 415ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 5/10\n",
-      "229/229 [==============================] - 99s 434ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 88s 439ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 6/10\n",
-      "229/229 [==============================] - 100s 438ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 83s 417ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 7/10\n",
-      "229/229 [==============================] - 100s 437ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 83s 416ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 8/10\n",
-      "229/229 [==============================] - 100s 436ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 84s 418ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 9/10\n",
-      "229/229 [==============================] - 100s 437ms/step - loss: 9.0796 - acc: 0.4367\n",
+      "200/200 [==============================] - 84s 418ms/step - loss: 8.0590 - acc: 0.5000\n",
       "Epoch 10/10\n",
-      "229/229 [==============================] - 100s 437ms/step - loss: 9.0796 - acc: 0.4367\n"
+      "200/200 [==============================] - 84s 419ms/step - loss: 8.0590 - acc: 0.5000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1c29a31f28>"
+       "<keras.callbacks.History at 0x1c298455c0>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7.897866864204406, 0.51]\n"
+      "[8.22022876739502, 0.49]\n"
      ]
     }
    ],
@@ -231,7 +243,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using Adam optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_list = [\"0\", \"1\"]\n",
+    "FC_LAYERS = [1024, 1024]\n",
+    "dropout = 0.5\n",
+    "\n",
+    "finetune_model = build_finetune_model(base_model, \n",
+    "                                      dropout=dropout, \n",
+    "                                      fc_layers=FC_LAYERS, \n",
+    "                                      num_classes=len(class_list))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -249,34 +293,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "229/229 [==============================] - 104s 455ms/step - loss: 1.5548 - acc: 0.4585\n",
+      "200/200 [==============================] - 86s 429ms/step - loss: 1.5421 - acc: 0.5100\n",
       "Epoch 2/10\n",
-      "229/229 [==============================] - 104s 455ms/step - loss: 0.9909 - acc: 0.6638\n",
+      "200/200 [==============================] - 84s 419ms/step - loss: 1.1365 - acc: 0.5850\n",
       "Epoch 3/10\n",
-      "229/229 [==============================] - 105s 461ms/step - loss: 0.8701 - acc: 0.6987\n",
+      "200/200 [==============================] - 87s 436ms/step - loss: 0.6412 - acc: 0.7450\n",
       "Epoch 4/10\n",
-      "229/229 [==============================] - 103s 451ms/step - loss: 0.5102 - acc: 0.8166\n",
+      "200/200 [==============================] - 87s 434ms/step - loss: 0.4914 - acc: 0.7950\n",
       "Epoch 5/10\n",
-      "229/229 [==============================] - 104s 453ms/step - loss: 0.4087 - acc: 0.8472\n",
+      "200/200 [==============================] - 85s 423ms/step - loss: 0.3864 - acc: 0.8600\n",
       "Epoch 6/10\n",
-      "229/229 [==============================] - 104s 453ms/step - loss: 0.3365 - acc: 0.8821\n",
+      "200/200 [==============================] - 94s 471ms/step - loss: 0.3197 - acc: 0.8750\n",
       "Epoch 7/10\n",
-      "229/229 [==============================] - 104s 453ms/step - loss: 0.3242 - acc: 0.8908\n",
+      "200/200 [==============================] - 84s 421ms/step - loss: 0.2717 - acc: 0.8950\n",
       "Epoch 8/10\n",
-      "229/229 [==============================] - 104s 456ms/step - loss: 0.2929 - acc: 0.9083\n",
+      "200/200 [==============================] - 83s 415ms/step - loss: 0.2389 - acc: 0.9050\n",
       "Epoch 9/10\n",
-      "229/229 [==============================] - 104s 453ms/step - loss: 0.1475 - acc: 0.9345\n",
+      "200/200 [==============================] - 83s 415ms/step - loss: 0.2517 - acc: 0.9050\n",
       "Epoch 10/10\n",
-      "229/229 [==============================] - 103s 450ms/step - loss: 0.1470 - acc: 0.9345\n"
+      "200/200 [==============================] - 84s 422ms/step - loss: 0.0984 - acc: 0.9600\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1c431f7c18>"
+       "<keras.callbacks.History at 0x1c433c0cf8>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.8435791015625, 0.49]\n"
+      "[0.7427052509784698, 0.51]\n"
      ]
     }
    ],
@@ -306,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +361,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_list = [\"0\", \"1\"]\n",
+    "FC_LAYERS = [1024, 1024]\n",
+    "dropout = 0.5\n",
+    "\n",
+    "finetune_model = build_finetune_model(base_model, \n",
+    "                                      dropout=dropout, \n",
+    "                                      fc_layers=FC_LAYERS, \n",
+    "                                      num_classes=len(class_list))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adam = Adam(lr=0.00001)\n",
+    "finetune_model.compile(adam, loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -325,34 +395,52 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "6/6 [==============================] - 91s 15s/step - loss: 1.3743 - acc: 0.6356 - val_loss: 1.4644 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 31s 15s/step - loss: 3.0074 - acc: 0.4305 - val_loss: 0.7369 - val_acc: 0.5000\n",
       "Epoch 2/10\n",
-      "6/6 [==============================] - 96s 16s/step - loss: 0.9927 - acc: 0.6875 - val_loss: 1.2469 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 30s 15s/step - loss: 2.9809 - acc: 0.4749 - val_loss: 0.7026 - val_acc: 0.5000\n",
       "Epoch 3/10\n",
-      "6/6 [==============================] - 84s 14s/step - loss: 1.0592 - acc: 0.6516 - val_loss: 1.3223 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 34s 17s/step - loss: 2.8912 - acc: 0.5625 - val_loss: 0.6981 - val_acc: 0.5000\n",
       "Epoch 4/10\n",
-      "6/6 [==============================] - 74s 12s/step - loss: 1.0025 - acc: 0.5843 - val_loss: 1.4588 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 32s 16s/step - loss: 2.7417 - acc: 0.4862 - val_loss: 0.7003 - val_acc: 0.5000\n",
       "Epoch 5/10\n",
-      "6/6 [==============================] - 95s 16s/step - loss: 0.9484 - acc: 0.6458 - val_loss: 1.3889 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 33s 17s/step - loss: 2.9769 - acc: 0.4531 - val_loss: 0.6992 - val_acc: 0.5000\n",
       "Epoch 6/10\n",
-      "6/6 [==============================] - 83s 14s/step - loss: 1.0717 - acc: 0.6035 - val_loss: 1.2772 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 28s 14s/step - loss: 3.1640 - acc: 0.4467 - val_loss: 0.6968 - val_acc: 0.5000\n",
       "Epoch 7/10\n",
-      "6/6 [==============================] - 82s 14s/step - loss: 1.1259 - acc: 0.6409 - val_loss: 1.2277 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 28s 14s/step - loss: 2.8834 - acc: 0.4377 - val_loss: 0.6956 - val_acc: 0.5000\n",
       "Epoch 8/10\n",
-      "6/6 [==============================] - 82s 14s/step - loss: 1.0376 - acc: 0.6063 - val_loss: 1.3490 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 28s 14s/step - loss: 2.8975 - acc: 0.5557 - val_loss: 0.6944 - val_acc: 0.6111\n",
       "Epoch 9/10\n",
-      "6/6 [==============================] - 82s 14s/step - loss: 0.7471 - acc: 0.7128 - val_loss: 1.3051 - val_acc: 0.0000e+00\n",
+      "2/2 [==============================] - 31s 15s/step - loss: 3.1555 - acc: 0.5312 - val_loss: 0.6952 - val_acc: 0.5556\n",
       "Epoch 10/10\n",
-      "6/6 [==============================] - 82s 14s/step - loss: 0.8657 - acc: 0.7183 - val_loss: 1.2191 - val_acc: 0.0000e+00\n"
+      "2/2 [==============================] - 28s 14s/step - loss: 2.6539 - acc: 0.4952 - val_loss: 0.6967 - val_acc: 0.5556\n"
      ]
     }
    ],
    "source": [
     "EPOCHS = 10\n",
     "BS = 32\n",
-    "H = finetune_model.fit_generator(aug.flow(rgb_batch[:200], Y_train[:200], batch_size=BS),\n",
-    "                                 validation_data=(rgb_batch[200:], Y_train[200:]), \n",
-    "                                 steps_per_epoch=len(rgb_batch[:200]) // BS,epochs=EPOCHS)"
+    "H = finetune_model.fit_generator(aug.flow(rgb_batch[:90]+rgb_batch[-90:], Y_train[:90]+Y_train[-90:], batch_size=BS),\n",
+    "                                 validation_data=(rgb_batch[91:109], Y_train[91:109]), \n",
+    "                                 steps_per_epoch=len(rgb_batch[:90]+rgb_batch[-90:]) // BS,epochs=EPOCHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.6891342234611512, 0.52]\n"
+     ]
+    }
+   ],
+   "source": [
+    "score3 = finetune_model.evaluate(Xtest_new, Y_test, verbose=0)\n",
+    "print(score3)\n"
    ]
   },
   {
@@ -360,9 +448,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
