--- a/capstone_two_modeling.ipynb
+++ b/capstone_two_modeling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -43,17 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Theano backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "\n",
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -177,34 +176,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "229/229 [==============================] - 14s 62ms/step - loss: 1.1588 - acc: 0.5459\n",
+      "200/200 [==============================] - 12s 61ms/step - loss: 0.7697 - acc: 0.5450\n",
       "Epoch 2/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6890 - acc: 0.5197\n",
+      "200/200 [==============================] - 12s 60ms/step - loss: 0.6759 - acc: 0.5600\n",
       "Epoch 3/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6715 - acc: 0.5852\n",
+      "200/200 [==============================] - 12s 61ms/step - loss: 0.6875 - acc: 0.5550\n",
       "Epoch 4/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6954 - acc: 0.6026\n",
+      "200/200 [==============================] - 12s 60ms/step - loss: 0.6708 - acc: 0.5600\n",
       "Epoch 5/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6562 - acc: 0.6463\n",
+      "200/200 [==============================] - 12s 61ms/step - loss: 0.6429 - acc: 0.6050\n",
       "Epoch 6/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6443 - acc: 0.6419\n",
+      "200/200 [==============================] - 12s 61ms/step - loss: 0.5998 - acc: 0.6850\n",
       "Epoch 7/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6270 - acc: 0.6376\n",
+      "200/200 [==============================] - 12s 60ms/step - loss: 0.6363 - acc: 0.6800\n",
       "Epoch 8/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6058 - acc: 0.6376\n",
+      "200/200 [==============================] - 12s 60ms/step - loss: 0.5126 - acc: 0.7550\n",
       "Epoch 9/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.6026 - acc: 0.6550\n",
+      "200/200 [==============================] - 12s 61ms/step - loss: 0.4632 - acc: 0.8050\n",
       "Epoch 10/10\n",
-      "229/229 [==============================] - 14s 61ms/step - loss: 0.5564 - acc: 0.7074\n"
+      "200/200 [==============================] - 12s 60ms/step - loss: 0.4100 - acc: 0.8400\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1c307f19e8>"
+       "<keras.callbacks.History at 0x1261747b8>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.907540876865387, 0.57]\n"
+      "[0.9454850590229035, 0.5]\n"
      ]
     }
    ],
@@ -253,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
