--- a/capstone_two_data_processing.ipynb
+++ b/capstone_two_data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,8 @@
      "output_type": "stream",
      "text": [
       "(129, 4)\n",
+      "(129,)\n",
+      "(100,)\n",
       "(200, 200)\n"
      ]
     }
@@ -32,14 +34,18 @@
     "\n",
     "unpickled_df = pd.read_pickle(\"./cropped_cavity.pkl\")\n",
     "print(unpickled_df.shape)\n",
-    "X_train_cavity_pickle=unpickled_df['image_crop'].values\n",
-    "Y_train_cavity_pickle=unpickled_df['caries'].values\n",
+    "X_train_cavity_pickle_129=unpickled_df['image_crop'].values\n",
+    "print(X_train_cavity_pickle_129.shape)\n",
+    "X_train_cavity_pickle=X_train_cavity_pickle_129[:100]\n",
+    "print(X_train_cavity_pickle.shape)\n",
+    "Y_train_cavity_pickle_129=unpickled_df['caries'].values\n",
+    "Y_train_cavity_pickle=Y_train_cavity_pickle_129[:100]\n",
     "print(X_train_cavity_pickle[1].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -63,25 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_cav=np.stack(X_train_cavity_pickle)\n",
-    "X_nc=np.stack(X_train_no_cavity_pickle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(229, 200, 200)\n",
-      "(229,)\n"
+      "(200, 200, 200)\n",
+      "(200,)\n"
      ]
     }
    ],
@@ -96,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,15 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[0. 1.]\n",
-      "(229, 2)\n"
+      "Using Theano backend.\n"
      ]
     }
    ],
@@ -130,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "[0. 1.]\n",
-      "(229, 2)\n"
+      "(200, 2)\n"
      ]
     }
    ],
@@ -149,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(229, 1, 200, 200)"
+       "(200, 1, 200, 200)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +248,7 @@
     }
    ],
    "source": [
-    "# loading saved cropped cavity images\n",
+    "# loading saved cropped cavity images for test set\n",
     "\n",
     "unpickled_df_test = pd.read_pickle(\"./test_cavity.pkl\")\n",
     "print(unpickled_df_test.shape)\n",
@@ -410,6 +405,27 @@
     "np.save(\"./X_test.npy\", X_test)\n",
     "np.save(\"./Y_test.npy\", Y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
