--- a/Capstone_two_data_collection.ipynb
+++ b/Capstone_two_data_collection.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Identifying Dental Cavities on Bitewing Images\n",
+    "\n",
+    "Dental cavities commonly appear as radiolucencies or dark shadows on certain areas of dental bitewing x-rays. The goal of this project is to use deep learning to identify dental cavities on x-rays using limited bitewing images collected from Google image search. This could provide preliminery suggestions of dental cavities to be verified with dentist, thus save time for the dentist. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Data collection\n",
+    "\n",
+    "Bitewing images are collected from Google image search with keyword 'dental bitewing x-ray'. Unique bitewing images are saved and labeled with the name of the original website. The images are randomly selected into training set and test set. Training images that contain teeth with one or more cavities are saved in the folder named 'cavity'. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open CV was used to label cavity and non-cavity on the x-rays. For the 'cavity' folder, part of each tooth containing cavity is selected, and saved into a dictionary. If there is other cavity on the same image, any key other than the 'return' key is pressed to allow selection of a different part of the image. If there is no other cavity on this image, 'return' key is pressed and the next image will appear. After the last image is selected, the selections are saved into a dictionary. (Note: the last image will not close on itself. Do not attempt to shut down the image as the dictionary may be erased. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dictionary is then saved into a pickle file. The dictionary contained 'r' - coordinate or location of the cropped image, 'filename'- original image name, 'image_crop' - cropped image, 'caries' - 1 indicating cavity and 0 indicating non-cavity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,6 +44,13 @@
     "import os\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1228,6 +1267,18 @@
     "Y_train_no_cavity_pickle=unpickled_nc_df['caries'].values\n",
     "print(X_train_no_cavity_pickle[1].shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
