--- a/capstone_two_data_processing.ipynb
+++ b/capstone_two_data_processing.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data Processing\n",
+    "X_train contains the cropped image with and without cavity. Y_train is the corresponding label of the cropped image. The dataset is re-shapped and Y_train put into categorical. Similar processing is done for test set. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -58,7 +66,7 @@
     }
    ],
    "source": [
-    "# loaking saved cropped non-cavity images\n",
+    "# loading saved cropped non-cavity images\n",
     "\n",
     "unpickled_nc_df = pd.read_pickle(\"./cropped_no_cavity.pkl\")\n",
     "print(unpickled_nc_df.shape)\n",
@@ -190,34 +198,6 @@
    "source": [
     "np.load(\"./X_train.npy\").shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
