--- a/capstone_two_modeling.ipynb
+++ b/capstone_two_modeling.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Modeling\n",
+    "First using direct sequential modeling. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resutls suggest that the model might be overfit for the dataset. The testing result suggests that the model is labeling all images as cavity or non-cavity, thus it's 50% accuracy "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
