--- a/capstone_two_transfer_learning.ipynb
+++ b/capstone_two_transfer_learning.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Transfer leaning using ResNet50 \n",
+    "Due to the small image size, we next tried transfer leaning using a commonly used pre-trained model ResNet50. The result also suggests overfitting of the training data and labeling all testing data into one category. This is likely due to ResNet50 was not previously trained on x-ray images, and features it has learned might be distracting. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
