--- a/cat_vs_dog.ipynb
+++ b/cat_vs_dog.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Checking the model on a cat vs dog dataset\n",
+    "From Kaggle we obtained 200 images of cats or dogs. Here we used the same ResNet50 pre-trained model to identify cats vs dogs. The results show improvement compared to the x-ray data. It suggests that the cavity data could be too difficult to identify, or ResNet50 is not working so well with x-ray data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -239,6 +254,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
